--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+
+  <div>
+          <% if logged_in?%>
+      <%= link_to "Add a Post", new_post_path %> |
+      <%= link_to "All Posts", posts_path %> |
+      <%= link_to "My Posts", user_posts_path(current_user) %> |
+      <%= link_to "Add a Comment", new_comment_path %> |
+      <%= link_to "All Categories", categories_path %> |
+      <%= link_to "Home", user_path(current_user)%> |
+      <%= link_to "Logout", logout_path, method:"delete"%>
+
+      <% else %>
+      <%=link_to "Sign Up", signup_path %> |
+      <%=link_to "Log In", login_path %>
+      <% end %>
+
+    </div>
+
+    <div>
+      <% if flash[:message] %>
+          <%= flash[:message]%>
+
+      <% end %>
+      <%= @error%>
+  </div>
     <%= yield %>
   </body>
 </html>
