adds trail form

--- a/app/views/trails/_trails.html.erb
+++ b/app/views/trails/_trails.html.erb
@@ -1,5 +1,5 @@
 <ul>
-    <% trails.each do |p|%>
-      <li><%= link_to p.title, post_path(p) %> - <%= p.name%> </li>
+    <% trails.each do |t|%>
+      <li><%= link_to t.location, trail_path(t) %> </li>
     <% end %>
 </ul>
