--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Edit <%= @bike.title%>!</h1>
+<h1>Edit <%= @bike.name%>!</h1>
 
-<%= render partial: "layouts/errors", locals: {object: @bike} %>
 
 <%= form_for(@bike) do |f|%>
 
@@ -9,7 +8,7 @@
   <%= f.text_field :name %>
   <br></br>
   <%= f.label :type %>
-  <%= f.text_area :type %>
+  <%= f.text_field :type %>
   <br></br>
   <%= f.label :quality %>
   <%= f.number_field :quality %>
