--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @trail.content%> - <%= @trail.user.username%></h2>
+<h2><%= @trail.location%> - <%= @trail.user.username%></h2>
 
 <% if @trail.user == current_user %>
   <%= link_to "Edit trail", edit_trail_path(@trail)%>
